<?xml version="1.0"?>
<package format="2">
  <name>ez_pick_and_place</name>
  <version>0.0.1</version>
  <description>The ez_pick_and_place package</description>

  <maintainer email="stavrinosgeo@gmail.com">George Stavrinos</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>
